[package]
name = "tochat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
asynchronous-codec = "0.6"
bytes = "1"
either = "1.6.0"
futures = "0.3.1"
futures-timer = "3"
instant = "0.1.11"
libp2p-core = { version = "0.36.0", default-features = false }
libp2p-swarm = { version = "0.39.0"}
log = "0.4"
pin-project = "1"
prost-codec = { version = "0.2" }
prost = "0.11"
rand = "0.8.4"
smallvec = "1.6.1"
static_assertions = "1"
thiserror = "1.0"
libp2p = { version = "0.48", default-features = false, features = ["identify", "relay", "ping", "noise", "plaintext", "tcp-async-io"] }
libp2p-identify = "0.39"
libp2p-kad = "0.40"
libp2p-ping = "0.39"
libp2p-plaintext = "0.36"
libp2p-yamux = "0.40"
quickcheck = "1"
clap = {version = "3.1.6", features = ["derive"]}
