[package]
name = "tochat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11"

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
asynchronous-codec = "0.6"
bytes = "1"
either = "1.6.0"
futures = "0.3.1"
futures-timer = "3"
instant = "0.1.11"
log = "0.4"
pin-project = "1"
prost-codec = { version = "0.2" }
prost = "0.11"
rand = "0.8.4"
smallvec = "1.6.1"
static_assertions = "1"
thiserror = "1.0"
libp2p = { version = "0.48", default-features = false, features = ["kad", "yamux", "plaintext", "identify", "relay", "ping", "noise", "plaintext", "tcp-async-io", "dcutr", "dns-async-std", "gossipsub"] }
quickcheck = "1"
clap = {version = "3.1.6", features = ["derive"]}
colorful = "0.2.1"
chrono = "0.4"
web3 = "0.17.0"
secp256k1 = { version = "0.24.0", features = ["rand-std"]}
tui = "0.19"
crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"